# somegamename

./: .gitmodules  CMakeLists.txt  main.cpp  main_test.cpp
src/: CBattlefield.cpp  CCanvas.cpp  CCanvas.h  CPlayer.cpp  CVelocity.cpp  Player.cpp  main.cpp
src/include/: CBattlefield.h  CCanvas.h  CPlayer.h  CVelocity.h  ICanvas.h  IDrawable.h  Player.h  Position.h
tests/: CMakeLists.txt  GameServerTest.cpp  PlayerTest.cpp
